# LamportAuth

./: README.md
lamport-auth/: CMakeLists.txt  CMakeLists.txt.bak  README.md  alice_hn.txt  bob_h0.txt  config_alice.json  config_bob.json  unit_tests
lamport-auth/docs/: demo_instructions.md  design.md
lamport-auth/src/: main.cpp
lamport-auth/src/app/: Controller.cpp  Controller.h
lamport-auth/src/crypto/: LamportChain.cpp  LamportChain.h
lamport-auth/src/gui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
lamport-auth/src/network/: NetworkManager.cpp  NetworkManager.h
lamport-auth/src/util/: ConfigManager.cpp  ConfigManager.h
lamport-auth/tests/: config_test.cpp  config_test.cpp.bak  unit_tests.cpp
lamport-auth/tools/gen_chain/: CMakeLists.txt  gen_chain  gen_chain.cpp  hash_chain.txt
